[gd_scene load_steps=7 format=3 uid="uid://csifkwxcn4vbs"]

[ext_resource type="PackedScene" uid="uid://dbt4l8heggobx" path="res://scenes/score_ui.tscn" id="1_36rxp"]
[ext_resource type="Script" path="res://scripts/game_ui.gd" id="1_cu863"]
[ext_resource type="PackedScene" uid="uid://most7j8bx8hc" path="res://scenes/game_buttons.tscn" id="2_rp8v0"]

[sub_resource type="Animation" id="Animation_22oap"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(648, 720)]
}

[sub_resource type="Animation" id="Animation_6vxla"]
resource_name = "menu_in"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -117), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(648, 905), Vector2(648, 788), Vector2(648, 788), Vector2(648, 720)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7h8wr"]
_data = {
"RESET": SubResource("Animation_22oap"),
"menu_in": SubResource("Animation_6vxla")
}

[node name="GameUI" type="VBoxContainer"]
editor_description = "This is required for the ScoreUI menu_in animation to position the UI correctly."
custom_minimum_size = Vector2(1280, 720)
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 4
mouse_filter = 2
theme_override_constants/separation = 0
script = ExtResource("1_cu863")
starting_animation = &"menu_in"

[node name="ScoreUI" parent="." instance=ExtResource("1_36rxp")]
unique_name_in_owner = true
layout_mode = 2

[node name="Spacer" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="GameButtons" parent="." instance=ExtResource("2_rp8v0")]
unique_name_in_owner = true
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_7h8wr")
}
